.apex/src/objects/GoogleSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Calendar_Scope__c</fullName>
        <label>Calendar_Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>ClientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerKey__c</fullName>
        <label>ConsumerKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoogleoAuthUrl__c</fullName>
        <label>GoogleoAuthUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_uri__c</fullName>
        <label>Redirect_uri</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GoogleSetting</label>
</CustomObject>